<resources>
    <string name="app_name">UniLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrati">Registrati</string>
    <string name="unilife">UniLife</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="accedi">Accedi</string>
    <string name="crea_un_nuovo_account">Crea un nuovo account</string>
    <string name="conferma">Conferma</string>
    <string name="oppure_crea_un_gruppo_cliccando_sul">Oppure crea un gruppo cliccando sul +</string>
    <string name="inserisci_il_codice_per_unirti_al_gruppo">Inserisci il codice per unirti al gruppo</string>
    <string name="non_appartieni_a_nessun_n_gruppo_di_coinquilini">Non appartieni a nessun\n gruppo di coinquilini :(</string>
    <string name="paga">Paga</string>
    <string name="indietro"><![CDATA[< Indietro]]></string>
    <string name="elimina_account">Elimina account</string>
    <string name="salva">Salva</string>
    <string name="esci_dall_account">Esci dall\'account</string>
    <string name="archivio">Archivio</string>
    <string name="account">Account</string>
    <string name="rimuovi">Rimuovi</string>
    <string name="invita_un_nuovo_coinquilino">Invita un nuovo coinquilino</string>
    <string name="invita">Invita</string>
    <string name="nuova_spesa">Nuova Spesa</string>
    <string name="titolo">Titolo</string>
    <string name="money">...€</string>
    <string name="data">Data</string>
    <string name="pagato_da">Pagato da</string>
    <string name="completata">Completata</string>
    <string name="aggiungi_titolo">Aggiungi titolo</string>
    <string name="aggiungi_attivit">Aggiungi Attività</string>
    <string name="scarica">scarica</string>
    <string name="elimina">elimina</string>
    <string name="aggiungi">aggiungi</string>
    <string name="codice">codice</string>
    <string name="attivit">Attività</string>
    <string name="modifica_attivit">Modifica Attività</string>
    <string name="modifica_spesa">Modifica Spesa</string>
    <string name="contatti">Contatti</string>
    <string name="aggiungi_contatto">+ Aggiungi Contatto</string>
    <string name="divisione_spese">Divisione Spese:</string>
    <string name="add">add</string>
    <string name="visualizza_attivit">Visualizza Attività</string>
    <string name="modifica">modifica</string>
    <string name="title_activity_registrazione">RegistrazioneActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="reels">Reels</string>
    <string name="profile">Profile</string>
    <string name="calendario">Calendario</string>
    <string name="pagamenti">Pagamenti</string>
    <string name="Email">Email</string>
    <string name="mail">Email</string>
    <string name="ok">OK</string>
    <string name="storage_access_required">Storage access is required</string>
    <string name="storage_permission_available">Storage permission is available. Starting preview</string>
    <string name="upload_success_message">upload eseguito con successo</string>
    <string name="upload_failure_message">upload fallito</string>
    <string name="storage_permission_granted">permesso garantito</string>
    <string name="permission_denied_message">permesso negato\n</string>
    <string name="storage_permission_not_available">storage permission not available</string>
    <string name="storage_permission_denied">permesso negato</string>
    <string name="partecipanti_al_gruppo">partecipanti al gruppo</string>
    <string name="crea_gruppo">Crea gruppo</string>
    <string name="addContatto">+</string>
    <string name="nome">Nome</string>
    <string name="numero_di_telefono">Numero di telefono</string>
    <string name="annulla">Annulla</string>
    <string name="titolo_attivit">Titolo Attività</string>
    <string name="agg">Aggiungi</string>
    <string name="clicca_sul_calendario_per_visualizzare_le_attivit_del_giorno">Clicca sul calendario per visualizzare le attività del giorno</string>
    <string name="no_pdf_file_selected_yet">no Pdf file selected</string>
    <string name="nuovo_pagamento">Nuovo pagamento</string>
    <string name="chi_deve_pagare">Chi deve pagare</string>
    <string name="Modifica" />
    <string name="modificaUsernameandPassword">Modifica</string>
</resources>