<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#817EFF"
    tools:context=".View.VisualizzaModificaAttivitaFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textUnilife"
        android:layout_width="92dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="#817EFF"
        android:text="@string/unilife"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="217dp"
        android:layout_height="58dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="24dp"
        android:background="#1082D5"
        android:gravity="center"
        android:text="@string/visualizza_attivit"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/modificaButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/annulaBtn"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="@color/blu"
        android:text="@string/indietro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/aggiungiButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/aggiungiButton"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/verdeacqua"
        android:text="@string/completata"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <ImageButton
        android:id="@+id/eliminaButton"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/elimina"
        android:src="@drawable/ic_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/modificaButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/modificaButton"
        android:layout_width="55dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:contentDescription="@string/modifica"
        android:scaleType="centerInside"
        android:src="@drawable/pencil"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:background="#81C6BA"
        android:ems="10"
        android:hint="@string/attivit"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="307dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:background="@color/verdone"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="308dp"
        android:layout_height="205dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="52dp"
        android:background="@color/verdone"
        android:backgroundTint="@color/verdone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextText4"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

</androidx.constraintlayout.widget.ConstraintLayout>