<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viola"
    tools:context=".View.ArchivioFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textUnilife"
        android:layout_width="92dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="#817EFF"
        android:text="@string/unilife"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="99dp"
        android:layout_height="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/archivio"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textUnilife" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="52dp"
        android:layout_height="50dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/elimina"
        android:src="@drawable/ic_delete"
        app:layout_constraintStart_toEndOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="90dp"
        android:contentDescription="@string/aggiungi"
        android:src="@drawable/ic_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginTop="105dp"
        android:layout_marginEnd="31dp"
        android:contentDescription="@string/scarica"
        android:src="@drawable/ic_cloud"
        app:layout_constraintEnd_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="258dp"
        android:layout_height="362dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="56dp"
        android:background="@color/verdone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />


</androidx.constraintlayout.widget.ConstraintLayout>