<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.AggiungiAttivitaFragment"
    android:background="@color/viola">

    <TextView
        android:id="@+id/textUnilife"
        android:layout_width="92dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="#817EFF"
        android:text="@string/unilife"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="221dp"
        android:layout_height="64dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="552dp"
        android:background="#1082D5"
        android:gravity="center"
        android:text="@string/visualizza_attivit"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="127dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/blu"
        android:text="@string/indietro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/recyclerView2"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />

    <Button
        android:id="@+id/button9"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/verdeacqua"
        android:text="@string/completata"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/recyclerView2"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="304dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="52dp"
        android:background="#81C6BA"
        android:ems="10"
        android:hint="@string/attivit"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <EditText
        android:id="@+id/editTextText4"
        android:layout_width="307dp"
        android:layout_height="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:background="@color/verdone"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="307dp"
        android:layout_height="208dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:background="@color/verdone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText4" />

</androidx.constraintlayout.widget.ConstraintLayout>